# computer_vision

./: .gitignore  LICENSE
hello_opencv/: CMakeLists.txt  README.md
hello_opencv/include/: ShowImage.h
hello_opencv/include/1_Video/: Load.h
hello_opencv/include/HelloOpenCv/: ShowImage.h  SobelFilter.h
hello_opencv/src/: main.cpp
learning_opencv/: CMakeLists.txt  README.md  conanfile.txt
learning_opencv/include/: Menu.h
learning_opencv/include/0_CreateMat/: CreateMatrix.h
learning_opencv/include/1_ShowImage/: ShowImage.h
learning_opencv/include/2_Video/: TrackBar.h
learning_opencv/include/3A_GrayWorld/: Grayworld.h
learning_opencv/include/3B_Enhancement/: Enhancements.h
learning_opencv/include/3C_ColorSpaces/: ColorSpaces.h
learning_opencv/src/: main.cpp
opencv_imgui_sfml/: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
opencv_imgui_sfml/include/Core/Constants/: Constants.h
opencv_imgui_sfml/include/Core/Events/: EventsHandler.h
opencv_imgui_sfml/include/Core/Initialization/: Arguments.h  Fonts.h
opencv_imgui_sfml/include/Core/Logging/: Logger.h
opencv_imgui_sfml/include/ImageProcessing/: Constants.hpp  Conversions.h  Drawing.h  Enhancements.hpp
opencv_imgui_sfml/include/ImageProcessing/Histogram/: Histogram.hpp
opencv_imgui_sfml/include/ImageProcessing/Morphology/: MorphologicalOperations.hpp
opencv_imgui_sfml/include/ImageProcessing/Preprocessing/: ColorSpaces.hpp  GrayWorld.hpp
opencv_imgui_sfml/include/ImageProcessing/Video/: LoadVideo.hpp
opencv_imgui_sfml/include/Screen/: Menu.h  MenuBuilder.h  MenuBuilder2.h
opencv_imgui_sfml/include/Screen/Components/: Background.h  Constants.h  IDrawable.h  StartWindow.h
opencv_imgui_sfml/include/bindings/: imgui-SFML.cpp  imgui-SFML.h
opencv_imgui_sfml/src/: main.cpp
opencv_imgui_sfml/src/Core/Events/: EventsHandler.cpp
opencv_imgui_sfml/src/Core/Logging/: Logger.cpp
opencv_imgui_sfml/src/ImageProcessing/: ColorSpaces.cpp  Conversions.cpp  Drawing.cpp  Enhancements.cpp  Preprocessing.cpp
opencv_imgui_sfml/src/ImageProcessing/Histogram/: Histogram.cpp
opencv_imgui_sfml/src/ImageProcessing/Morphology/: MorphologicalOperations.cpp
opencv_imgui_sfml/src/ImageProcessing/Preprocessing/: ColorSpaces.cpp  Enhancements.cpp  Preprocessing.cpp
opencv_imgui_sfml/src/ImageProcessing/Video/: LoadVideo.cpp
opencv_imgui_sfml/src/Screen/: MenuBuilder.cpp  MenuBuilder2.cpp
opencv_imgui_sfml/src/Screen/Components/: Background.cpp  StartWindow.cpp
